syntax = "proto3";

option java_package = "kr.co.velnova.grpc.helloworld";
option java_outer_classname = "HelloWorldProto";
option java_multiple_files = true;

package hello;

service HelloService {
    rpc HelloWorld(HelloRequest) returns (HelloResponse) {}

}

message HelloRequest {
    string first_name = 1;
    string last_name = 2;
}
message HelloResponse {
    string message = 1;
}